Added checks for game win status. When a user wins/loses/draw then a pop up is shown. Added the "abandon" endpoint as well

--- a/clients/src/main/resources/static/index.html
+++ b/clients/src/main/resources/static/index.html
@@ -75,8 +75,14 @@
 <div id="messagePopup" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Game Created</h4>
+            </div>
             <div class="modal-body">
                 <label id="messagePopupText" class="control-label text"></label>
+            </div>
+            <div class="modal-footer center">
+                <button id="closePopupBtn" type="button" class="btn btn-default" data-dismiss="modal">OK</button>
             </div>
         </div>
     </div>
@@ -117,6 +123,6 @@
 <script type="text/javascript" src="js/chess-board-setup.js"></script>
 <script type="text/javascript" src="js/chess.js"></script>
 <script type="text/javascript" src="js/chessboard-0.3.0.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/main.js?44554400009"></script>
 </body>
 </html>
