--- a/clients/src/main/resources/static/index.html
+++ b/clients/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Lightning Chess CorDapp</title>
     <link rel="stylesheet" href="css/chessboard-0.3.0.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?334">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
@@ -45,6 +45,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button id="modalCreateGameBtn" type="button" class="btn btn-primary">Create</button>
+                    <img id="gameLoader" class="hide" src="img/loader.gif"/>
                 </div>
             </form>
         </div>
@@ -123,6 +124,6 @@
 <script type="text/javascript" src="js/chess-board-setup.js"></script>
 <script type="text/javascript" src="js/chess.js"></script>
 <script type="text/javascript" src="js/chessboard-0.3.0.min.js"></script>
-<script type="text/javascript" src="js/main.js?44554400009"></script>
+<script type="text/javascript" src="js/main.js?445544lld22kk433df0000499"></script>
 </body>
 </html>
