--- a/clients/src/main/resources/static/index.html
+++ b/clients/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Lightning Chess CorDapp</title>
     <link rel="stylesheet" href="css/chessboard-0.3.0.css">
-    <link rel="stylesheet" href="css/main.css?334">
+    <link rel="stylesheet" href="css/main.css?3dff34">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
@@ -88,6 +88,18 @@
         </div>
     </div>
 </div>
+<div id="movePopup" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <label id="movePopupText" class="control-label text"></label>
+            </div>
+            <div class="modal-footer center">
+                <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div style="margin:15px">
     <h5 style="display:inline-block">You: </h5><span id="myNickname"></span>
     <br/>
@@ -124,6 +136,6 @@
 <script type="text/javascript" src="js/chess-board-setup.js"></script>
 <script type="text/javascript" src="js/chess.js"></script>
 <script type="text/javascript" src="js/chessboard-0.3.0.min.js"></script>
-<script type="text/javascript" src="js/main.js?445544lld22kk433df0000499"></script>
+<script type="text/javascript" src="js/main.js?445544lld22kdk433dddf0000499"></script>
 </body>
 </html>
