Solved the castling issue. Now the castling is rendered to the opponent's screen

--- a/clients/src/main/resources/static/index.html
+++ b/clients/src/main/resources/static/index.html
@@ -133,9 +133,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/chess-board-setup.js"></script>
+<script type="text/javascript" src="js/chess-board-setup.js?4fff44fff"></script>
 <script type="text/javascript" src="js/chess.js"></script>
 <script type="text/javascript" src="js/chessboard-0.3.0.min.js"></script>
-<script type="text/javascript" src="js/main.js?445544lld22kdk433dddf0000499"></script>
+<script type="text/javascript" src="js/main.js?445544lld2cc2kffd44k433dddf0000499"></script>
 </body>
 </html>
