Pretyfied the console log output on the popup

--- a/clients/src/main/resources/static/index.html
+++ b/clients/src/main/resources/static/index.html
@@ -92,7 +92,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body">
-                <label id="movePopupText" class="control-label text"></label>
+                <pre id="movePopupText" class="control-label text"></pre>
             </div>
             <div class="modal-footer center">
                 <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -136,6 +136,6 @@
 <script type="text/javascript" src="js/chess-board-setup.js?4fff44fff"></script>
 <script type="text/javascript" src="js/chess.js"></script>
 <script type="text/javascript" src="js/chessboard-0.3.0.min.js"></script>
-<script type="text/javascript" src="js/main.js?445544lld2cc2kffd44k433dddf0000499"></script>
+<script type="text/javascript" src="js/main.js?4455400f4lcfffflld2cc2kffd44k433dddf0000499"></script>
 </body>
 </html>
